syntax = "proto3";

package bibliography;

// Bibliography service definition
service BibliographyService {
  // Create a new library item
  rpc CreateLibraryItem(CreateLibraryItemRequest) returns (LibraryItemResponse);
  
  // Create a new library item with PDF
  rpc CreateLibraryItemWithPdf(CreateLibraryItemWithPdfRequest) returns (LibraryItemResponse);
  
  // Get a library item by ID
  rpc GetLibraryItem(GetLibraryItemRequest) returns (LibraryItemResponse);
  
  // Search for library items
  rpc SearchLibraryItems(SearchLibraryItemsRequest) returns (SearchLibraryItemsResponse);
  
  // Delete a library item by ID
  rpc DeleteLibraryItem(DeleteLibraryItemRequest) returns (DeleteLibraryItemResponse);
  
  // Update library item metadata
  rpc UpdateLibraryItemMetadata(UpdateLibraryItemMetadataRequest) returns (LibraryItemResponse);
  
  // Update library item markdown content
  rpc UpdateLibraryItemMarkdown(UpdateLibraryItemMarkdownRequest) returns (LibraryItemResponse);
  
  // Get PDF download URL
  rpc GetPdfDownloadUrl(GetPdfDownloadUrlRequest) returns (PdfDownloadUrlResponse);
  
  // Get PDF upload URL
  rpc GetPdfUploadUrl(GetPdfUploadUrlRequest) returns (PdfUploadUrlResponse);
  
  // Add an archive to a library item
  rpc AddArchiveToItem(AddArchiveToItemRequest) returns (LibraryItemResponse);
}

// Author message
message Author {
  string first_name = 1;
  string last_name = 2;
  optional string middle_name = 3;
}

// Item Archive message
message ItemArchive {
  string file_type = 1;
  int64 file_size = 2;
  string file_hash = 3;
  string add_date = 4;
  string s3_key = 5;
  int32 page_count = 6;
  optional int64 word_count = 7;
}

// Library Item message
message LibraryItem {
  string id = 1;
  string title = 2;
  repeated Author authors = 3;
  optional string abstract = 4;
  optional int32 publication_year = 5;
  optional string publisher = 6;
  optional string isbn = 7;
  optional string doi = 8;
  optional string url = 9;
  repeated string tags = 10;
  optional string notes = 11;
  repeated string collections = 12;
  string date_added = 13;
  string date_modified = 14;
  optional string language = 15;
  optional string markdown_content = 16;
  optional string markdown_updated_date = 17;
  repeated ItemArchive archives = 18;
}

// Request and Response messages

message CreateLibraryItemRequest {
  string title = 1;
  repeated Author authors = 2;
  optional string abstract = 3;
  optional int32 publication_year = 4;
  optional string publisher = 5;
  optional string isbn = 6;
  optional string doi = 7;
  optional string url = 8;
  repeated string tags = 9;
  optional string notes = 10;
  repeated string collections = 11;
  optional string language = 12;
}

message CreateLibraryItemWithPdfRequest {
  string title = 1;
  repeated Author authors = 2;
  optional string abstract = 3;
  optional int32 publication_year = 4;
  optional string publisher = 5;
  optional string isbn = 6;
  optional string doi = 7;
  optional string url = 8;
  repeated string tags = 9;
  optional string notes = 10;
  repeated string collections = 11;
  optional string language = 12;
  bytes pdf_buffer = 13;
  optional string file_name = 14;
  int32 page_count = 15;
}

message GetLibraryItemRequest {
  string id = 1;
}

message SearchLibraryItemsRequest {
  optional string query = 1;
  repeated string tags = 2;
  repeated string collections = 3;
}

message SearchLibraryItemsResponse {
  repeated LibraryItem items = 1;
}

message DeleteLibraryItemRequest {
  string id = 1;
}

message DeleteLibraryItemResponse {
  bool success = 1;
  string message = 2;
}

message UpdateLibraryItemMetadataRequest {
  string id = 1;
  optional string title = 2;
  repeated Author authors = 3;
  optional string abstract = 4;
  optional int32 publication_year = 5;
  optional string publisher = 6;
  optional string isbn = 7;
  optional string doi = 8;
  optional string url = 9;
  repeated string tags = 10;
  optional string notes = 11;
  repeated string collections = 12;
  optional string language = 13;
  optional string markdown_content = 14;
  repeated ItemArchive archives = 15;
}

message UpdateLibraryItemMarkdownRequest {
  string id = 1;
  string markdown_content = 2;
}

message GetPdfDownloadUrlRequest {
  string id = 1;
}

message PdfDownloadUrlResponse {
  string download_url = 1;
  string expires_at = 2;
}

message GetPdfUploadUrlRequest {
  string file_name = 1;
  optional int32 expires_in = 2;
}

message PdfUploadUrlResponse {
  string upload_url = 1;
  string s3_key = 2;
  string expires_at = 3;
}

message AddArchiveToItemRequest {
  string id = 1;
  string file_type = 2;
  int64 file_size = 3;
  string file_hash = 4;
  string s3_key = 5;
  int32 page_count = 6;
  optional int64 word_count = 7;
}

message LibraryItemResponse {
  LibraryItem item = 1;
}